--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-form": "^0.0.3",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "file-saver": "^2.0.5",
     "next": "13.4.9",
     "openai": "^3.3.0",
     "postcss": "8.4.25",
