--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ctrl/react-adsense": "^1.7.0",
     "@radix-ui/react-form": "^0.0.3",
     "@types/file-saver": "^2.0.5",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
+    "eslint": "^8.44.0",
     "eslint-config-next": "13.4.9",
     "file-saver": "^2.0.5",
     "next": "13.4.9",
@@ -25,5 +26,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^1.3.0"
   }
 }
